# seiche

./: .gitignore  DESIGN.md  README.md  glama.json  run.sh  server.json
.github/: FUNDING.yml
.github/workflows/: cache-rules.yml  deploy-hetzner.yml  dispatch-daily.yml  publish-mcp.yml  publish-pypi.yml  publish-static.yml  publish.yml  security-headers.yml
backend/: README.md  pyproject.toml
backend/scripts/: append_book_record.py  export_public.py  export_snapshot.py  ping_indexnow.py
backend/seiche/: accounts.py  ai.py  alerts.py  api.py  assemble.py  attest.py  badge.py  brief.py  cli.py  config.py  dispatch_daily.py  dispatch_pages.py  mailer.py  mcp_server.py  notary.py  provisioning.py  public_view.py  publisher.py  store.py  usage.py  x402.py
backend/seiche/dispatches/: 2026-07-09-fat-tail.paid.md  2026-07-12-daily.paid.md  2026-07-13-daily.paid.md  2026-07-15-daily.paid.md  2026-07-16-daily.paid.md  2026-07-17-daily.paid.md  2026-07-20-daily.paid.md  2026-07-21-daily.paid.md  2026-07-22-daily.paid.md  2026-07-23-daily.paid.md  2026-07-24-daily.paid.md
backend/seiche/engines/: auctions.py  backtest.py  basins.py  bathymetry.py  book.py  breakwater.py  caesar.py  communique.py  composite.py  cpsentinel.py  echo.py  edetect.py  farbasin.py  fleet.py  gyre.py  harbors.py  history.py  hydrophone.py  kink.py  leakaudit.py  market.py  markov.py  merian.py  microseism.py  mlpred.py  montecarlo.py  moorings.py  navigator.py  oujump.py  playbook.py  regatta.py  resonance.py  riptide.py  roguewave.py  rvxray.py  scuttlebutt.py  searoom.py  seastate.py  sonar.py  spillover.py  (+12 more)
backend/seiche/sources/: base.py  bis.py  boj.py  cftc.py  chinamoney.py  crypto.py  ecb.py  fedtext.py  fiscaldata.py  fred.py  gdelt.py  llamahacks.py  nyfed.py  ofr.py  palimpsest.py  windfetch.py
backend/tests/: conftest.py  test_accounts.py  test_api_caching.py  test_attest.py  test_backtest_split.py  test_badge.py  test_boj.py  test_book.py  test_bot.py  test_caesar.py  test_cpsentinel.py  test_dispatch_daily.py  test_dispatch_pages.py  test_edetect.py  test_engines.py  test_gauge.py  test_gdelt.py  test_gyre.py  test_harbors.py  test_leakaudit.py  test_llamahacks.py  test_mcp_http.py  test_mcp_server.py  test_merian.py  test_microseism.py  test_notary.py  test_provisioning.py  test_roguewave.py  test_scenarios.py  test_spillover.py  test_tier1.py  test_windfetch.py  test_wrecks.py  test_x402.py
bot/: seiche_bot.py
bot/deploy/: seiche-bot-alert.service  seiche-bot-alert.timer  seiche-bot-letter.service  seiche-bot-letter.timer  seiche-bot-tandem.service  seiche-bot-tandem.timer  seiche-bot.service
docs/: CRYPTO.md  GUIDE.md  HERMES.md  IDEAS.md  LAUNCH.md  MCP.md  MONETIZATION.md  PUBLISHING.md  RESEARCH-2026-07.md  RESEARCH-REPOS-2026-07.md  RESEARCH.md  STRATEGY.md  attested-record.md  report.html
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ops/: Caddyfile  DEBUGGING.md  com.seiche.watch.plist
(+71 files in other folders)
