[project]
name = "seiche"
version = "0.7.0"
description = "Funding-stress and leveraged-positioning early-warning terminal (money market + capital market), built on free keyless public APIs."
readme = "README.md"
# 3.12+ only: the MCP bridge calls the async assembler via asyncio.run() per
# call, and on 3.10/3.11 the module-level asyncio.Lock in assemble.py raises
# "bound to a different event loop" across loops. 3.12 relaxed that binding;
# prod runs 3.12. Keep this floor so a PyPI install can't land on 3.11.
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.11",        # microseism MLE (was transitive via sklearn; now direct)
    "arch>=7",            # regatta: Model Confidence Set bootstrap
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
notary = ["opentimestamps>=0.4"]   # Bitcoin anchoring for the record ledger

[project.scripts]
seiche = "seiche.cli:main"
seiche-mcp = "seiche.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["seiche*"]
